<resources>
    <string name="app_name">Tab Chess</string>

    <string name="new_board">
        white_rook,white_knight,white_bishop,white_king,white_queen,white_bishop,white_knight,white_rook,
        white_pawn,white_pawn,white_pawn,white_pawn,white_pawn,white_pawn,white_pawn,white_pawn,
        free_square,free_square,free_square,free_square,free_square,free_square,free_square,free_square,
        free_square,free_square,free_square,free_square,free_square,free_square,free_square,free_square,
        free_square,free_square,free_square,free_square,free_square,free_square,free_square,free_square,
        free_square,free_square,free_square,free_square,free_square,free_square,free_square,free_square,
        black_pawn,black_pawn,black_pawn,black_pawn,black_pawn,black_pawn,black_pawn,black_pawn,
        black_rook,black_knight,black_bishop,black_king,black_queen,black_bishop,black_knight,black_rook
    </string>


    <string name="test_board">
        white_rook,white_knight,white_bishop,white_king,white_queen,white_bishop,white_knight,white_rook,
        white_pawn,white_pawn,white_pawn,free_square,free_square,free_square,free_square,free_square,
        free_square,free_square,free_square,free_square,free_square,free_square,free_square,free_square,
        free_square,free_square,free_square,free_square,free_square,free_square,free_square,free_square,
        free_square,free_square,free_square,free_square,free_square,free_square,free_square,free_square,
        free_square,free_square,free_square,free_square,free_square,free_square,free_square,free_square,
        free_square,free_square,free_square,free_square,free_square,black_pawn,black_pawn,black_pawn,
        black_rook,black_knight,black_bishop,black_king,black_queen,black_bishop,black_knight,black_rook
    </string>


    <string name="board_spaces">
        a0,a1,a2,a3,a4,a5,a6,a7,b0,b1,b2,b3,b4,b5,b6,b7,c0,c1,c2,c3,c4,c5,c6,c7,d0,d1,d2,d3,d4,d5,d6,d7,e0,e1,e2,e3,e4,e5,e6,e7,f0,f1,f2,f3,f4,f5,f6,f7,g0,g1,g2,g3,g4,g5,g6,g7,h0,h1,h2,h3,h4,h5,h6,h7
    </string>



    <!-- from Firebase Auth -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>



</resources>
