<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/load_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:text="openChess"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="64dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="40dp"
                        android:background="#6a000000"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />


                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:background="#6a000000"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />


                    <!-- Login Button -->

                    <Button
                        android:id="@+id/sign_up_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="20dip"
                        android:background="@color/colorAccent"
                        android:text="@string/action_sign_in_short"
                        android:textColor="@android:color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_reset_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dip"
                            android:background="@null"
                            android:text="@string/btn_forgot_password"
                            android:textAllCaps="false"
                            android:textColor="@color/colorAccent" />

                        <!-- Link to Login Screen -->

                        <Button
                            android:id="@+id/sign_in_button"

                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dip"
                            android:background="@null"
                            android:text="@string/btn_link_to_login"
                            android:textAllCaps="false"
                            android:textColor="#FFFFFF"
                            android:textSize="15dp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="#FF0000"
                android:gravity="center">


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>